[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["Aliaksandr Rahalevich <saksmlz@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha.6"
futures = "0.1"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.14", features = ["compat"] }
actix_web_async_compat = { git = "https://github.com/saks/actix_web_async_compat.git" }
tokio = "0.1"
hyper = "0.12"
# actix_web_async_compat = { path = "../../" }
